dev tools img, fixed overflow problem

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -18,7 +18,6 @@ h3 {
 
 .container {
   width: 50vw;
-  height: 100vh;
   background-color: white;
   text-align: center;
   padding-left: 10%;
